# floretta

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  reexport.wat  rust-toolchain.toml
.github/: release.py  summary.py  version.py  wasm.py
.github/workflows/: build.yml  release.yml
crates/floretta/: Cargo.toml  README.md
crates/floretta-cli/: Cargo.toml  README.md
crates/floretta-fidget/: Cargo.toml
crates/floretta-fidget/src/: main.rs  vm.rs
crates/floretta-wasm/: Cargo.toml
crates/floretta-wasm/src/: lib.rs
crates/floretta/src/: api.rs  forward.rs  helper.rs  lib.rs  name.rs  reverse.rs  run.rs  transform.rs  util.rs  validate.rs
crates/floretta/src/reverse/: names.wat  tests.rs
crates/floretta/src/wat/: br.wat  br_if_return.wat  call.wat  drop_f32.wat  drop_f64.wat  drop_i32.wat  drop_i64.wat  else.wat  f32_add.wat  f32_const.wat  f32_convert_i32_s.wat  f32_convert_i32_u.wat  f32_convert_i64_s.wat  f32_convert_i64_u.wat  f32_copysign.wat  f32_div.wat  f32_max.wat  f32_min.wat  f32_mul.wat  f32_neg.wat  f32_sqrt.wat  f32_store_load.wat  f32_sub.wat  f64_add.wat  f64_const.wat  f64_convert_i32_s.wat  f64_convert_i32_u.wat  f64_convert_i64_s.wat  f64_convert_i64_u.wat  f64_copysign.wat  f64_div.wat  f64_max.wat  f64_min.wat  f64_mul.wat  f64_neg.wat  f64_sqrt.wat  f64_store_load.wat  f64_sub.wat  i32_and.wat  i32_clz.wat  (+45 more)
