[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT"
repository = "https://github.com/samestep/floretta"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
floretta = { path = "crates/floretta", version = "0.1.0" }
wasm-encoder = "0.220"
wasmparser = "0.220"
wasmprinter = "0.220"
wasmtime = "26"
wat = "1"
