[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.0"
license = "MIT"
repository = "https://github.com/samestep/floretta"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
floretta = { path = "crates/floretta", version = "=0.3.0" }
thiserror = "2"
wasm-encoder = { version = "0.225", default-features = false, features = [
  "wasmparser",
] }
wasmparser = { version = "0.225", default-features = false, features = [
  "features",
  "validate",
] }
wasmprinter = "0.225"
wasmtime = "29"
wat = "1"

# https://github.com/johnthagen/min-sized-rust
[profile.tiny]
codegen-units = 1
inherits = "release"
lto = true
opt-level = "z"
strip = true
