[package]
name = "floretta"
description = "Automatic differentiation for WebAssembly."
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
wasm-encoder.workspace = true
wasmparser.workspace = true

[dev-dependencies]
wasmtime.workspace = true
wat.workspace = true
