[package]
name = "floretta"
description = "Automatic differentiation for WebAssembly."
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
regex.workspace = true
thiserror.workspace = true
wasm-encoder.workspace = true
wasmparser.workspace = true

[features]
default = ["names"]
names = []

[dev-dependencies]
goldenfile.workspace = true
wasmprinter.workspace = true
wasmtime.workspace = true
wat.workspace = true
